i want kill myself with this code on php
