# storage/api-docs/api-docs.json
@@ -421,6 +421,7 @@
                     "Bonus"
                 ],
                 "summary": "История всех выданных бонусов (компания)",
+                "description": "История всех выданных бонусов компанией",
                 "operationId": "getCompanyHistory",
                 "responses": {
                     "200": {
@@ -428,10 +429,15 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/BonusClaim"
-                                    }
+                                    "properties": {
+                                        "bonuses": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/BonusClaim"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
@@ -450,6 +456,7 @@
                     "Bonus"
                 ],
                 "summary": "История полученных бонусов (пользователь)",
+                "description": "История полученных бонусов пользователем",
                 "operationId": "getUserHistory",
                 "responses": {
                     "200": {
@@ -457,10 +464,15 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/BonusClaim"
-                                    }
+                                    "properties": {
+                                        "bonuses": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/BonusClaim"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
@@ -582,10 +594,15 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "array",
-                                    "items": {
-                                        "$ref": "#/components/schemas/Bonus"
-                                    }
+                                    "properties": {
+                                        "user": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Bonus"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
@@ -720,7 +737,22 @@
                 "operationId": "ec29d816f9500d752eba4ed1a86677e2",
                 "responses": {
                     "200": {
-                        "description": "Список волонтёров"
+                        "description": "Список волонтёров",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "volunteers": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/VolunteerRecipient"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
                     }
                 },
                 "security": [
@@ -804,12 +836,12 @@
                     "created_at": {
                         "type": "string",
                         "format": "date-time",
-                        "example": "2025-04-23T15:47:55.000000Z"
+                        "example": "2025-04-23T15:47:55Z"
                     },
                     "updated_at": {
                         "type": "string",
                         "format": "date-time",
-                        "example": "2025-04-23T15:47:55.000000Z"
+                        "example": "2025-04-23T15:47:55Z"
                     }
                 },
                 "type": "object"
